<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="xyz.juniverse.babylistener.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>

    <View
        android:id="@+id/tutorial_helper_setting"
        android:layout_width="?attr/actionBarSize"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="end|top"/>

    <LinearLayout
        android:id="@+id/layout_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_target_number"
                android:textStyle="bold"/>

            <AutoCompleteTextView
                android:id="@+id/target_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:hint="@string/prompt_hint_name_or_number"
                android:maxLines="1"/>

        </LinearLayout>

        <TextView
            android:id="@+id/sensitivity_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="16dp"
            android:text="@string/prompt_sound_sensitivity"
            android:textStyle="bold"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <LinearLayout
                android:id="@+id/layout_sensitivity_ctrl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/prompt_maximum"/>

                <FrameLayout
                    android:id="@+id/sensitivity_wrapper"
                    android:layout_width="32dp"
                    android:layout_height="300dp"
                    android:layout_gravity="center_horizontal"
                    android:background="#10000000">

                    <SeekBar
                        android:id="@+id/sensitivity"
                        android:layout_width="300dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        android:rotation="270"/>
                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/prompt_minimum"/>

            </LinearLayout>

            <xyz.juniverse.babylistener.detection.WavePlotter
                android:id="@+id/waver_plotter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/layout_sensitivity_ctrl"
                android:layout_alignTop="@id/layout_sensitivity_ctrl"
                android:layout_marginBottom="34dp"
                android:layout_marginTop="34dp"
                android:layout_toEndOf="@id/layout_sensitivity_ctrl"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/test_helper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:drawableBottom="@drawable/ic_arrow_downward"
                    android:text="@string/prompt_click_to_test"/>

                <FrameLayout
                    android:id="@+id/tester"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/wave2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/ic_detecting_wave"/>

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/wave1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/ic_detecting_wave"/>

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/dot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/ic_detecting"/>
                </FrameLayout>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:tint="#fff"
        app:srcCompat="@drawable/ic_hearing"/>

    <xyz.juniverse.babylistener.etc.TutorialPane
        android:id="@+id/tutorial"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="100dp"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/charge_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:padding="10dp"
        android:src="@drawable/ic_battery_alert"
        android:tint="#ff0000"/>

    <FrameLayout
        android:id="@+id/layout_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#70000000">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_loading"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/please_wait_for_ad"
                android:textColor="#fff"/>
        </LinearLayout>
    </FrameLayout>
</android.support.design.widget.CoordinatorLayout>
